--- a/MessagePosterApp/MessagePosterApp.csproj
+++ b/MessagePosterApp/MessagePosterApp.csproj
@@ -46,6 +46,7 @@
     <Compile Include="MessagePoster.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
