Adds failing test for InMemoryUserMsg Repository

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MessagePosterTests.cs" />
+    <Compile Include="MessageRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
