--- a/MessagePosterApp/MessagePosterApp.csproj
+++ b/MessagePosterApp/MessagePosterApp.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IUserMessageRepository.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="MessagePoster.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
