Adds a console UI using in memory repository

--- a/MessagePosterApp/MessagePosterApp.csproj
+++ b/MessagePosterApp/MessagePosterApp.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IUserMessageRepository.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="MessagePoster.cs" />
+    <Compile Include="MessagePosterUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserMessage.cs" />
